Fixed IsolatedTransaction